# DS1_2020_Wet1

./: AVL_tests_OLD.h  AvlTree.h  AvlTree_OLD.h  CMakeLists.txt  Course.cpp  Course.h  CoursesManager.cpp  CoursesManager.h  List.cpp  List.h  MyClass.cpp  MyClass.h  README.md  Views.cpp  Views.h  library.cpp  main.cpp
